# hashcat-legacy

./: .gitignore  ChangeLog  Makefile.am  configure.ac
charsets/: Makefile.am
debian/: changelog
debian/DEBIAN/: control
docs/: Makefile.am
examples/: Makefile.am
include/: common.h  engine-algo.h  engine-utils.h  engine.h
masks/: Makefile.am
rules/: Makefile.am
salts/: Makefile.am
src/: Makefile.am  Makefile.legacy  engine-algo.c  engine-utils.c  engine.c  hashcat-cli.c
tables/: Makefile.am
tools/: Makefile.am  deps.sh
