examplesdir = $(datadir)/@PACKAGE@/examples
examples_DATA = A0.M0.hash A0.M0.word A0.M1000.hash A0.M1000.word A0.M100.hash A0.M100.word A0.M101.hash A0.M101.word A0.M10.hash A0.M10.word A0.M1100.hash A0.M1100.word A0.M1400.hash A0.M1400.word A0.M1410.hash A0.M1410.word A0.M1420.hash A0.M1420.word A0.M1600.hash A0.M1600.word A0.M1700.hash A0.M1700.word A0.M1710.hash A0.M1710.word A0.M1720.hash A0.M1720.word A0.M1731.hash A0.M1731.word A0.M1800.hash A0.M1800.word A0.M200.hash A0.M200.word A0.M300.hash A0.M300.word A0.M400.hash A0.M400.word A0.M500.hash A0.M500.word A0.M800.hash A0.M800.word A0.M900.hash A0.M900.word A1.M0.hash A1.M0.word A3.M0.hash A3.M0.word
